tests/hopix/typechecker/good/recfuns.hopix
fun f (x : int) : int =
  f (x + 1) + 1