tests/hopix/typechecker/bad/while2.hopix
fun f (x : unit) : int =
 while (true) { f (nothing) }